--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = yolo_uno
 framework = arduino
-monitor_speed = 115200git add .
+monitor_speed = 115200
 board_build.filesystem = littlefs
 
 build_flags =
